# reinforcement-learning-akirus

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: train_cartpole_a2c.py  train_cartpole_ppo.py  train_cartpole_vpg.py  train_lunar_lander_ddqn.py  train_pendulum_ddpg.py  train_simple_ql.py  train_snake_ddqn.py  train_snake_dqn.py  train_snake_dqn_with_mem.py  train_snake_grpo.py  train_snake_ppo.py  train_snake_ql.py  train_snake_sarsa.py
src/: __init__.py  buffers.py  environment.py  main.py  noise.py  trainers.py  utils.py
src/envs/: __init__.py  base_env.py  simple_env.py  snake_env.py
