[tool.poetry]
name = "reinforcement_learning"
version = "0.1.0"
description = ""
authors = ["Rustam Akimov <akirusprod@gmail.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.2"
tqdm = "^4.66.2"
matplotlib = "^3.10.0"
pygame = "^2.6.0"
torch = {version = "^2.5.0+cpu", source = "pytorch"}
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
moviepy = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
